# API-workshop

./: .gitignore  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: main.yml
app/: data.py  main.py  schema.py
tests/: test_main.py
