[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Patrick Souza <patrick_ams@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pytest = "^7.4.3"
httpx = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
